# rne

./: .gitignore  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: install.md  manual_smoke.md
src/rne/: __init__.py  __main__.py  config.py  db.py  handbrake.py  makemkv.py  models.py  probe.py
src/rne/cli/: __init__.py  _pipeline.py  disc_split.py  edit.py  ingest.py  ls.py  manage.py  prompts.py  queue.py  service.py
src/rne/dashboard/: app.py  routes.py
src/rne/dashboard/templates/: base.html  index.html
src/rne/systemd/: rne-dashboard.service  rne-worker.service
src/rne/worker/: daemon.py  heartbeat.py  runner.py
systemd/: rne-dashboard.service  rne-worker.service
tests/: conftest.py  manual_smoke.md  test_cli.py  test_daemon.py  test_db.py  test_disc_split.py  test_handbrake.py  test_makemkv.py  test_models.py  test_probe.py  test_queue.py  test_runner.py  test_service.py
tests/fixtures/: fake_encoder_fail.sh  fake_encoder_ok.sh  ffprobe_sample.json  makemkv_info_sample.txt  seed_dashboard.py
