[project]
name = "rne"
version = "0.1.0"
description = "Rip-n-Encode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
]

[project.scripts]
rne = "rne.cli:main"
rne-worker = "rne.worker.daemon:main"
rne-dashboard = "rne.dashboard.app:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
