[project]
name = "rne"
version = "0.2.0"
description = "Rip-n-Encode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
]

[project.scripts]
rne = "rne.cli:main"
rne-worker = "rne.worker.daemon:main"
rne-dashboard = "rne.dashboard.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rne"]

[tool.hatch.build.targets.wheel.force-include]
"src/rne/systemd/rne-worker.service" = "rne/systemd/rne-worker.service"
"src/rne/systemd/rne-dashboard.service" = "rne/systemd/rne-dashboard.service"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
